# angel-whisper

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
benches/: llsd.rs
proto/: frame.proto
scripts/: collect-coverage  coverage-rustc  llvm-gcov
src/: angel_system.rs  errors.rs  lib.rs
src/llsd/: authenticator.rs  client.rs  errors.rs  hashmapstore.rs  message.rs  mod.rs  route.rs  session.rs  sessionstore.rs  tokio.rs
src/llsd/frames/: frame.rs  mod.rs
src/llsd/request/: mod.rs  parser.rs  request.rs
src/llsd/session/: client.rs  frame.rs  mod.rs  server.rs
src/system/: authenticator.rs  hashmapstore.rs  mod.rs  router.rs  sessionstore.rs
tests/: angel_system_bare.rs  llsd.rs  system-on-tokio.rs  system_on_tokio.rs
tests/support/: client.rs  mod.rs
