[package]
authors = ["Andrey Cherkashin"]
name = "angel_whisper"
version = "0.1.0"

[features]
default = ["protobuf"]
#system-on-tokio = ["tokio-core", "tokio-proto", "tokio-service"]
#system-on-tokio = ["tokio-service", "futures"]

[dependencies]
serde = "0.7"
blunder = "0.1"
byteorder = "1.0.0"
chrono = "0.2"
nom = "1.2"
slog = "2.0.6"
sodiumoxide = "0.0.15"
uuid = "0.5"
typemap = "0.3.3"
murmurhash64 = "0.3.1"

# optional
protobuf = { version = "1.0", optional = true }
