[package]
authors = ["Andrey Cherkashin"]
name = "angel_whisper"
version = "0.1.0"

[dependencies]
blunder = "0.1.7"
byteorder = "1.0.0"
bytes = "0.4"
chrono = "0.2"
murmurhash64 = "0.3.1"
nom = "3.0"
serde = "0.7"
slog = "2.0.6"
sodiumoxide = "0.0.15"
typemap = "0.3.3"
uuid = "0.5"

[dependencies.futures]
optional = true
version = "0.1.14"

[dependencies.protobuf]
optional = true
version = "1.0"

[dependencies.tokio-core]
optional = true
version = "0.1.8"

[dependencies.tokio-io]
optional = true
version = "0.1.2"

[dependencies.tokio-proto]
optional = true
version = "0.1.1"

[dependencies.tokio-service]
optional = true
version = "0.1.0"

[features]
default = ["system-on-tokio"]
system-on-tokio = ["protobuf", "tokio-proto", "tokio-service", "tokio-io", "tokio-core", "futures"]
